[gd_scene load_steps=6 format=3 uid="uid://dbgd3edxrew52"]

[ext_resource type="Script" uid="uid://bx4jrr2j6reep" path="res://Scripts/UI/BossHealthBar.gd" id="1_boss_hb"]
[ext_resource type="FontFile" uid="uid://btuil5fxofpsw" path="res://Assets/Font/BitcountGridDouble_Cursive-Bold.ttf" id="2_font"]

[sub_resource type="LabelSettings" id="LabelSettings_name"]
font = ExtResource("2_font")
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.05, 0.05, 0.05, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_health"]
font = ExtResource("2_font")
font_size = 12
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="BossHealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -80.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = -90.0
script = ExtResource("1_boss_hb")

[node name="BossNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "BOSS"
label_settings = SubResource("LabelSettings_name")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBarContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 27.0
offset_right = -30.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Fill" type="ColorRect" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.2, 0.2, 1)

[node name="HealthLabel" type="Label" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100%"
label_settings = SubResource("LabelSettings_health")
horizontal_alignment = 1
vertical_alignment = 1
